update undo button (faster)